public/v/release-3.3/_sources/getting_started/sensors/zed_setup.rst.txt
=========================
Isaac ROS ZED Setup
=========================

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/zed_parts.png>`
   :width: 200px
   :align: center

ZED cameras require the following to be able to publish data to ROS 2 topics:

1. ZED SDK (Step 5 of Setup Instructions)
2. ``zed-ros2-wrapper`` (Cloned in Step 1 of Setup Instructions)
3. ZED X driver (Installed by user on host machine in Step 3 of Setup Instructions)

Camera Compatibility
--------------------

All cameras supported by the `zed ros2 wrapper <https://github.com/stereolabs/zed-ros2-wrapper>`_ work with Isaac ROS.

================= ==============
ZED Model         SQA Testing?
================= ==============
ZED 2i              ✓
ZED X               ✓
ZED 2               ✗
ZED                 ✗
ZED Mini            ✗
ZED X Mini          ✗
================= ==============


Setup Instructions
------------------

This tutorial assumes that you have set up your development environment by following the instructions :doc:`here </getting_started/index>`.

1. Clone the ``zed-ros2-wrapper`` repository on the ``master`` branch:

  .. code:: bash

      cd ${ISAAC_ROS_WS}/src && \
      git clone --recurse-submodules https://github.com/stereolabs/zed-ros2-wrapper

2. If you are using ZED X or ZED X Mini refer to the appropriate `stereolabs setup guide <https://www.stereolabs.com/docs/get-started-with-zed-x/>`_.

   * You do **not** need to install the ``ZED SDK`` because this is done in Step 5 of Setup Instructions.
   * You must install the ``ZED driver``.


3. Plug in the USB cable of your ZED camera, before launching the Docker container in the next step.

4. Launch the Docker container.

  .. code:: bash

    cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
    ./scripts/run_dev.py

5. Install the ``ZED SDK``.

    Use ``install-zed-x86_64.sh`` below if you are running on X86.

  .. code:: bash

    sudo chmod +x ${ISAAC_ROS_WS}/src/isaac_ros_common/docker/scripts/install-zed-aarch64.sh && \
    ${ISAAC_ROS_WS}/src/isaac_ros_common/docker/scripts/install-zed-aarch64.sh

6. Install the dependencies for the ``zed_wrapper`` package and build it:

  .. code:: bash

      cd ${ISAAC_ROS_WS} && \
      sudo apt update && \
      rosdep update && rosdep install --from-paths src/zed-ros2-wrapper --ignore-src -r -y && \
      colcon build --symlink-install --packages-up-to zed_wrapper

7. After the container image is rebuilt and you are inside the container, you can run ``/usr/local/zed/tools/ZED_Explorer`` to check that the ZED camera is connected.

  .. code:: bash

    /usr/local/zed/tools/ZED_Explorer

  If everything is working as expected, verify that you have something similar to the following:

  .. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/zed_explorer.png>`
     :align: center
